[package]
name = "internet-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
influxdb = { version = "0.7.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11.1"